--- a/les_02_css/les02-oef03.html
+++ b/les_02_css/les02-oef03.html
@@ -9,10 +9,14 @@
 
   <body>
     <div>
-      <div></div>
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="container">
+        <div class="box red"></div>
+        <div class="box green"></div>
+      </div>
+      <div class="container">
+        <div class="box blue"></div>
+        <div class="box yellow"></div>
+      </div>
     </div>
   </body>
 </html>
