--- a/les_02_css/les02-oef04.html
+++ b/les_02_css/les02-oef04.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="nl">
-
-<head>
+  <head>
     <title>Les 02 - Oef 04</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="author" content="Docent" />
-</head>
+    <link rel="stylesheet" href="CSS/les02-oef04.css"
+  </head>
 
-<body>
-    <div>
-        <h2>Sectie 1</h2>
-        <p>Dit is de eerste sectie.</p>
+  <body>
+    <div class="section" id="sectie1">
+      <h2 section>Sectie 1</h2>
+      <p>Dit is de eerste sectie.</p>
     </div>
 
-    <div>
-        <h2>Sectie 2</h2>
-        <p>Dit is de tweede sectie.</p>
+    <div class="section" id="sectie2">
+      <h2>Sectie 2</h2>
+      <p>Dit is de tweede sectie.</p>
     </div>
 
-    <div>
-        <h2>Sectie 3</h2>
-        <p>Dit is de derde sectie.</p>
+    <div class="section" id="sectie3">
+      <h2 section>Sectie 3</h2>
+      <p>Dit is de derde sectie.</p>
     </div>
-</body>
-
+  </body>
 </html>
